--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Card</title>
+    <title>zwroe</title>
 
     <!-- Favicon -->
     <link rel="icon" href="https://media.discordapp.net/attachments/1212183337074958438/1353562238853709864/download.png?ex=67e21a91&is=67e0c911&hm=ab594f33181dcf78883a85f7dfcb1e0220a68bf063292a262bd4e8a9a8994b55&=&format=webp&quality=lossless&width=141&height=141" type="image/x-icon">
