--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: black;
+            color: white;
             position: relative;
         }
 
