--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             width: 100%;
             height: 100%;
             background-color: black;
-            filter: blur(20px); /* Apply blur to the background only */
             z-index: -1; /* Make sure the background stays behind the content */
         }
 
@@ -111,7 +110,7 @@
 </head>
 <body>
 
-    <div id="clickScreen" class="click-screen" onclick="showProfile()">[ CLICK ANYWHERE ]</div>
+    <div id="clickScreen" class="click-screen" onclick="showProfile()">[ click anywhere ]</div>
     
     <div id="profileCard" class="card hidden">
         <audio id="backgroundMusic" loop>
