--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Primary Meta Tags -->
     <title>zwroe</title>
+    <meta name="title" content="zwroe" />
+    <meta name="description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="zwroe" />
+    <meta property="og:description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
+    <meta property="og:image" content="your-custom-image-link.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="" />
+    <meta property="twitter:title" content="zwroe" />
+    <meta property="twitter:description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
+    <meta property="twitter:image" content="your-custom-image-link.png" />
 
     <!-- Favicon -->
     <link rel="icon" href="https://media.discordapp.net/attachments/1212183337074958438/1353562238853709864/download.png?ex=67e21a91&is=67e0c911&hm=ab594f33181dcf78883a85f7dfcb1e0220a68bf063292a262bd4e8a9a8994b55&=&format=webp&quality=lossless&width=141&height=141" type="image/x-icon">
