--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <title>zwroe</title>
     <meta name="title" content="zwroe" />
     <meta name="description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1255738487101984809/1353796329343549491/back.png?ex=67e2f495&is=67e1a315&hm=a1ac2996c74fb9bd97f16d99d99930af445e39204b9db4f8eac1cea7c3b34d3a&=&format=webp&quality=lossless&width=1675&height=838" />
+
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="zwroe.com" />
     <meta property="og:title" content="zwroe" />
     <meta property="og:description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
-    <meta property="og:image" content="your-custom-image-link.png" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1255738487101984809/1353796329343549491/back.png?ex=67e2f495&is=67e1a315&hm=a1ac2996c74fb9bd97f16d99d99930af445e39204b9db4f8eac1cea7c3b34d3a&=&format=webp&quality=lossless&width=1675&height=838" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="" />
+    <meta property="twitter:url" content="zwroe.com" />
     <meta property="twitter:title" content="zwroe" />
     <meta property="twitter:description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
-    <meta property="twitter:image" content="your-custom-image-link.png" />
+    <meta property="twitter:image" content="https://media.discordapp.net/attachments/1255738487101984809/1353796329343549491/back.png?ex=67e2f495&is=67e1a315&hm=a1ac2996c74fb9bd97f16d99d99930af445e39204b9db4f8eac1cea7c3b34d3a&=&format=webp&quality=lossless&width=1675&height=838" />
 
     <!-- Favicon -->
     <link rel="icon" href="https://media.discordapp.net/attachments/1212183337074958438/1353562238853709864/download.png?ex=67e21a91&is=67e0c911&hm=ab594f33181dcf78883a85f7dfcb1e0220a68bf063292a262bd4e8a9a8994b55&=&format=webp&quality=lossless&width=141&height=141" type="image/x-icon">
