--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta property="og:url" content="https://zwroe.com" />
     <meta property="og:title" content="zwroe" />
     <meta property="og:description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
-    <meta property="og:image" content="images/background.png" />
+    <meta property="og:image" content="images/metabackground1.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:image" content="images/background.png" />
+    <meta property="twitter:image" content="images/metabackground2.png" />
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
