--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <meta property="og:url" content="https://zwroe.com" />
     <meta property="og:title" content="zwroe" />
     <meta property="og:description" content="𝘇𝘄𝗿𝗼𝗲 // 𝗳𝗿𝗼𝘀𝘁" />
-    <meta property="og:image" content="https://zwroe.com/images/metabackground1.png" />
-
+    <meta property="og:image" content="https://zwroe.com/images/background.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:image" content="https://zwroe.com/images/metabackground2.png" />
 
