--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             height: 250px;
             opacity: 0;
             pointer-events: none;
-            transition: opacity 1s ease-in-out, transform 0.5s ease-out;
+            transition: opacity 1s ease-in-out, transform 0.5s ease-out, box-shadow 0.3s ease-in-out;
             position: absolute;
             top: 50%;
             left: 50%;
