--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:image" content="https://zwroe.com/images/metabackground2.png" />
 
-    <!-- Favicon -->
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
     <style>
@@ -35,19 +34,23 @@
             z-index: -10;   
         }
 
-        body::before {
+            body::before {
             content: "";
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+            backdrop-filter: blur(8px);
+            transition: backdrop-filter 0.1s ease;
+            z-index: -1;
         }
+
 
         .hidden { display: none; }
 
         .click-screen {
-            font-size: 100px;
+            font-size: 50px;
             color: white;
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.7), 0 0 20px rgba(255, 255, 255, 0.7), 0 0 30px rgba(255, 255, 255, 0.7);
             width: 100vw;
@@ -76,11 +79,15 @@
             height: 250px;
             opacity: 0;
             pointer-events: none;
-            transition: opacity 1s ease-in-out, transform 0.5s ease-out, box-shadow 0.3s ease-in-out;
+            transition: opacity 1s ease-in-out, transform 0.2s ease, box-shadow 0.3s ease-in-out;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -60%);
+            transform-style: preserve-3d;
+            will-change: transform;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+
         }
 
         .card:hover {
@@ -268,6 +275,24 @@
         audio.muted = value == 0;
         volumeIcon.src = value == 0 ? "images/volume-off.png" : "images/volume-on.png";
     }
+
+const card = document.getElementById("profileCard");
+
+document.addEventListener("mousemove", (e) => {
+    const x = (window.innerWidth / 2 - e.clientX) / 30;
+    const y = (window.innerHeight / 2 - e.clientY) / 30;
+    
+    if (!card.classList.contains("hidden")) {
+        card.style.transform = `translate(-50%, -50%) rotateY(${x}deg) rotateX(${y}deg)`;
+    }
+});
+
+document.addEventListener("mouseleave", () => {
+    if (!card.classList.contains("hidden")) {
+        card.style.transform = "translate(-50%, -50%) rotateY(0deg) rotateX(0deg)";
+    }
+});
+
     </script>
 </body>
 </html>
